--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <section class="projects">
         <div class="projects-content container">
             <div class="projects-1">
-                <h1></h1>
-                <p></p>
+                <h1>Scoreboard</h1>
+                <p>Used by Christian Athletic Volunteers for their tournaments</p>
                 <a href="#"><img src="/images/proj1.jpg" alt=""></a>
             </div>
             <div class="projects-2">
-                <h1></h1>
-                <p></p>
+                <h1>Queueing System</h1>
+                <p>Build for a client for their business.</p>
                 <a href="#"><img src="/images/proj2.jpg" alt=""></a>
             </div>
         </div>
