--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/css/all.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
-<body>
-    <header>
+<body>0
+.     <header>
         <div class="main-header">
             <div class="main-header-top container">
                 <div class="logo">
